working on the top part of the page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header">
+    <nav class="header">
         <div class="header-left">
             <img src="" alt="Web-Logo">
         </div>
@@ -18,66 +19,65 @@
                 <li><a href="#">header-link-3</a></li>
             </ul>
         </div>
-    </div>
-    <div class="">
-        <div>
+    </nav>
+    <div class="top-container">
+        <div class="top-content-header">
             <h2>This website is awesome</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Accumsan sit amet nulla facilisi morbi tempus iaculis urna.</p>
-            <button type="button">Sign Up</button>
+                Accumsan sit amet nulla facilisi morbi tempus iaculis urna.
+            </p>
+            <div><button type="button">Sign Up</button></div>
         </div>
-        <div>
+        <div class="top-content-figure">
             <figure>
                 <p>image placeholder</p>
-                <img src="" alt="">
+                <img src="" alt="placeholder">
             </figure>
         </div>
     </div>
-    <div class="">
+    <div class="second-container">
         <h3>Some Random Information</h3>
-        <div>
+        <div class="image-box">
             <div><img src="" alt="a"></div>
             <div>box1</div>
         </div>
-        <div>
+        <div class="image-box">
             <div><img src="" alt="b"></div>
             <div>box2</div>
         </div>
-        <div>
+        <div class="image-box">
             <div><img src="" alt="c"></div>
             <div>box3</div>
         </div>
-        <div>
+        <div class="image-box">
             <div><img src="" alt="d"></div>
             <div>box4</div>
         </div>
     </div>
-    <div class="">
-        <div>
-            <div>
+    <div class="third-container">
+        <div class="quote-box">
             <blockquote>
                 For 50 years, WWF has been protecting the future of nature. 
                 The world's leading conservation organization, 
                 WWF works in 100 countries and is supported by 1.2 million members in the United States and 
                 close to 5 million globally.
             </blockquote>
-            </div>
             <div>-Thor, God of Thunder</div>
         </div>
     </div>
-    <div class="">
-        <div>
+    <div class="forth-container">
+        <div class="shill-box">
             <div>
                 <h3>Call to action! It's time!</h3>
                 <p>sign up for our product something something</p>
             </div>
-            <div><button>Sign Up</button></div>
+            <button>Sign Up</button>
         </div>
     </div>
 
     <footer>
-        <div>Copyright &#169; The Odin Project 2021</div>
+        <div>Copyright &#169; The Odin Project 2021</div> 
     </footer>
 </body>
 </html>
