add style to the whole page [WIP]

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="header">
         <div class="header-left">
-            <img src="" alt="Web-Logo">
+            <img src="images/viking-logo.png" alt="viking-logo">
         </div>
         <div class="header-right">
             <ul>
@@ -31,29 +31,32 @@
         </div>
         <div class="top-content-figure">
             <figure>
-                <p>image placeholder</p>
-                <img src="" alt="placeholder">
+                <img src="images/meadow.jpg" alt="meadow">
+                <figcaption class="byline">Photo by Marina Leonova from Pexels</figcaption>
             </figure>
         </div>
     </div>
     <div class="second-container">
         <h3>Some Random Information</h3>
-        <div class="image-box">
-            <div><img src="" alt="a"></div>
-            <div>box1</div>
+        <div class="img-box-container">
+            <div>
+                <div class="image-box"><img src="images/viking-helmet.jpg" alt=" - Photo by Meik Schmidt from Pexels"></div>
+                <div>box1</div>
+            </div>
+            <div>
+                <div class="image-box"><img src="images/kid-w-horse.jpg" alt="Photo by Hannah Grapp from Pexels"></div>
+                <div>box2</div>
+            </div>
+            <div>
+                <div class="image-box"><img src="images/nordic-letter.jpg" alt="Photo by Dagmara Dombrovska from Pexels"></div>
+                <div>box3</div>
+            </div>
+            <div>
+                <div class="image-box"><img src="images/viking-stone.jpg" alt="Photo by Erik Mclean from Pexels"></div>
+                <div>box4</div>
+            </div>
         </div>
-        <div class="image-box">
-            <div><img src="" alt="b"></div>
-            <div>box2</div>
-        </div>
-        <div class="image-box">
-            <div><img src="" alt="c"></div>
-            <div>box3</div>
-        </div>
-        <div class="image-box">
-            <div><img src="" alt="d"></div>
-            <div>box4</div>
-        </div>
+        
     </div>
     <div class="third-container">
         <div class="quote-box">
@@ -72,12 +75,17 @@
                 <h3>Call to action! It's time!</h3>
                 <p>sign up for our product something something</p>
             </div>
-            <button>Sign Up</button>
+            <div class="button"><button>Sign Up</button></div>
         </div>
     </div>
 
     <footer>
         <div>Copyright &#169; The Odin Project 2021</div> 
     </footer>
+
+    <!-- credit
+    <a href="https://www.flaticon.com/free-icons/helmet" title="helmet icons">Helmet icons created by Freepik - Flaticon</a>
+    <a href="https://www.flaticon.com/free-icons/mystic" title="mystic icons">Mystic icons created by Freepik - Flaticon</a>
+    -->
 </body>
 </html>
