kinda match with the template [WIP]

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <nav class="header">
+    <header class="header">
         <div class="header-left">
             <img src="images/viking-logo.png" alt="viking-logo">
         </div>
-        <div class="header-right">
+        <nav class="header-right">
             <ul>
                 <li><a href="#">header-link-1</a></li>
                 <li><a href="#">header-link-2</a></li>
                 <li><a href="#">header-link-3</a></li>
             </ul>
-        </div>
+        </header>
     </nav>
     <div class="top-container">
         <div class="top-content-header">
@@ -39,22 +39,22 @@
     <div class="second-container">
         <h3>Some Random Information</h3>
         <div class="img-box-container">
-            <div>
-                <div class="image-box"><img src="images/viking-helmet.jpg" alt=" - Photo by Meik Schmidt from Pexels"></div>
-                <div>box1</div>
-            </div>
-            <div>
-                <div class="image-box"><img src="images/kid-w-horse.jpg" alt="Photo by Hannah Grapp from Pexels"></div>
-                <div>box2</div>
-            </div>
-            <div>
-                <div class="image-box"><img src="images/nordic-letter.jpg" alt="Photo by Dagmara Dombrovska from Pexels"></div>
-                <div>box3</div>
-            </div>
-            <div>
-                <div class="image-box"><img src="images/viking-stone.jpg" alt="Photo by Erik Mclean from Pexels"></div>
-                <div>box4</div>
-            </div>
+            <figure class="image-box">
+                <img src="images/viking-helmet.jpg" alt=" - Photo by Meik Schmidt from Pexels">
+                <figcaption class="image-figcap">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
+            </figure>
+            <figure class="image-box">
+                <img src="images/viking-boat.jpg" alt="Photo by Barnabas Davoti from Pexels">
+                <figcaption class="image-figcap">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
+            </figure>
+            <figure class="image-box">
+                <img src="images/nordic-letter.jpg" alt="Photo by Dagmara Dombrovska from Pexels">
+                <figcaption class="image-figcap">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
+            </figure>
+            <figure class="image-box">
+                <img src="images/viking-stone.jpg" alt="Photo by Erik Mclean from Pexels">
+                <figcaption class="image-figcap">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
+            </figure>
         </div>
         
     </div>
