add some media queries[WIP]

--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
     <div class="second-container">
         <h3>Some Random Information</h3>
         <div class="img-box-container">
-            <figure class="image-box">
+            <div class="image-box">
                 <img src="images/viking-helmet.jpg" alt=" - Photo by Meik Schmidt from Pexels">
                 <figcaption class="image-figcap">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="image-box">
+            </div>
+            <div class="image-box">
                 <img src="images/viking-boat.jpg" alt="Photo by Barnabas Davoti from Pexels">
                 <figcaption class="image-figcap">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="image-box">
+            </div>
+            <div class="image-box">
                 <img src="images/nordic-letter.jpg" alt="Photo by Dagmara Dombrovska from Pexels">
                 <figcaption class="image-figcap">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
-            <figure class="image-box">
+            </div>
+            <div class="image-box">
                 <img src="images/viking-stone.jpg" alt="Photo by Erik Mclean from Pexels">
                 <figcaption class="image-figcap">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</figcaption>
-            </figure>
+            </div>
         </div>
         
     </div>
